# A-SImple-Blockchain

./: CMakeLists.txt  ReadMe.md  blockchain.proto
files/: transactions.csv
headers/: blockchain.grpc.pb.cc  blockchain.grpc.pb.h  blockchain.h  blockchain.pb.h  client.h  database.h  server.h  utils.h
proto/: blockchain.pb.cc  blockchain.pb.h
src/: blockchain.cc  blockchain.grpc.pb.cc  blockchain.pb.cc  client.cc  database.cpp  server.cc  utils.cc
